现在可以通过点击按钮复制出订阅链接了，顺便优化了下排版

--- a/templates/common/qrcode_modal.html
+++ b/templates/common/qrcode_modal.html
@@ -83,9 +83,9 @@
                             break;
                         }
                 }
-                console.log(sel_svr.address);
-                console.log(sel_inb.port);
-                console.log(this.qrModal.customer.identifier);
+                // console.log(sel_svr.address);
+                // console.log(sel_inb.port);
+                // console.log(this.qrModal.customer.identifier);
                 let content = genVmessLink(sel_svr, sel_inb, this.qrModal.customer);
                 qrModal.content = content;
                 if (qrModal.qrcode === null) {
